--- a/README.adoc
+++ b/README.adoc
@@ -151,25 +151,29 @@ $ ./ng version
  / ___ \| | | | (_| | |_| | | (_| | |      | |___| |___ | |
 /_/   \_\_| |_|\__, |\__,_|_|\__,_|_|       \____|_____|___|
            |___/
-Angular CLI: 6.0.8
+Angular CLI: 7.3.7
 Node: 9.11.2
 OS: linux x64
-Angular: <error>
+Angular: 7.2.11
 ... animations, common, compiler, compiler-cli, core, forms
-... http, language-service, platform-browser
-... platform-browser-dynamic, router
+... language-service, platform-browser, platform-browser-dynamic
+... router
 
-Package                         Version
----------------------------------------------------------
-@angular-devkit/architect       0.6.8
-@angular-devkit/build-angular   <error>
-@angular-devkit/core            0.6.8
-@angular-devkit/schematics      0.6.8
-@angular/cli                    6.0.8
-@schematics/angular             0.6.8
-@schematics/update              0.6.8
-rxjs                            6.2.1
-typescript                      2.7.2
+Package                           Version
+-----------------------------------------------------------
+@angular-devkit/architect         0.13.7
+@angular-devkit/build-angular     0.13.7
+@angular-devkit/build-optimizer   0.13.7
+@angular-devkit/build-webpack     0.13.7
+@angular-devkit/core              7.3.7
+@angular-devkit/schematics        7.3.7
+@angular/cli                      7.3.7
+@ngtools/webpack                  7.3.7
+@schematics/angular               7.3.7
+@schematics/update                0.13.7
+rxjs                              6.3.3
+typescript                        3.2.4
+webpack                           4.29.0
 ```
 
 At this point, the tests work:
